@@ -44,6 +44,6 @@
 #define WEB_COLOR_HEADER "#6383b7"
 #define WEB_COLOR_DIALOG_HEADER "#D6D3CE"
 #define WEB_COLOR_DIALOG_BACKGROUND "#C6C3C6"
-
+#define WEB_TABLE_WIDTH 640
 
 #endif  // CGICOMMANDS_H
